fixed bug when using <file ID> and nVH setup

--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -7,6 +7,7 @@ Changes from 2.2.6 to 2.2.7
 * Fixed a non-virtualhost bug in "Mail to a friend"
 * Added better logic to the forgot password page
 * Fixed several bugs with the referer list in eZ stats.
+* Fixed bug when using <file ID> and nVH setup.
 
 Changes from 2.2.5 to 2.2.6
 ---------------------------
