--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -3,6 +3,8 @@ eZ publish changelog:
 
 Changes from 2.2.6 to 2.2.7
 ---------------------------
+* Added sorting of session information by idle time, template updated in admin and added translation for user id.
+* Fixed correct display of session idle time when > 24 h.
 * Fixed redirect to 403 page when accessing a restricted article
 * Fixed a non-virtualhost bug in "Mail to a friend"
 * Added better logic to the forgot password page
