--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -12,6 +12,7 @@ Changes from 2.2.6 to 2.2.7
 * Fixed several bugs with the referer list in eZ stats.
 * Fixed bug when using <file ID> and nVH setup.
 * Articles no longer loose their placement when using the XMLRPC interface
+* Fixed sorting of user list in admin area
 
 Changes from 2.2.5 to 2.2.6
 ---------------------------
