--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -3,6 +3,7 @@ eZ publish changelog:
 
 Changes from 2.2.6 to 2.2.7
 ---------------------------
+* Fixed bug when editing unassigned images.
 * Fixed correct escaping of article keywords.
 * Added sorting of session information by idle time, template updated in admin and added translation for user id.
 * Fixed correct display of session idle time when > 24 h.
